[package]
name = "axios-incident-check-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dashmap = "6"
futures = "0.3"
ignore = "0.4"
num_cpus = "1"
parking_lot = "0.12"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }